k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trifid
spec:
  ports:
  - port: 80
    targetPort: http
