k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trifid
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lindas-admin-ch.zazukoians.org
spec:
  rules:
  - host: lindas.admin.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: trifid
          servicePort: 80
